--- a/application-form.html
+++ b/application-form.html
@@ -1,21 +1,25 @@
 <!doctype html>
 <html>
 <head>
+    <link rel="stylesheet" type="text/css" href="./styles.css">
     <title>Application Form</title>
 </head>
 <body>
-    <h1>Please fill out your application form here.</h>
-    <div>
-        <p>This application is <i>very</i> important. Please proof-read before submitting</p>
-    </div>
+    <h1>Application Form</h1>
+
+        <p class="instructions">
+            This application is <i>very</i> important. Please proof-read before submitting
+        </p>
 
     <form>
-        First Name:  <input type="text" name="firstname">
+        <label for="firstname">First Name:</label>
+        <input id="submission_info" type="text" name="firstname">
     </form>
     <br>
 
     <form>
-        Last Name: <input type="text" name="firstname">
+        <label for="lastname"><b>Last Name</b>:</label>
+        <input id="submission_info" type="text" name="lastname">
     </form>
     <br>
 
@@ -26,6 +30,11 @@
                 <option value="QA Engineer">QA Engineer</option>
                 <option value="Product Manager">Product Manager</option>
             </select>
+    </form>
+    <br>
+
+    <form action="url-to-submit-form-to" methods="POST">
+        <input type="submit" class="submission_info">
     </form>
 
 </body>
