--- a/coffee.html
+++ b/coffee.html
@@ -43,21 +43,27 @@
     </div>
 </div>
 
+<script src="https://code.jquery.com/jquery.js"></script>
+
 <script>
     "use strict";
 
-    var myImage = document.getElementById("coffee_image");
-    var myRevenueMessage = document.getElementById("revenue");
+    // var myImage = document.getElementById("coffee_image");
+    // myImage.setAttribute("src", "static/coffee_beans.jpg");
+    $("#coffee_image").attr("src", "static/coffee_beans.jpg");
 
-    myImage.setAttribute("src", "static/coffee_beans.jpg");
-
-    myImage.addEventListener("click", makeCoffee);
+    // myImage.addEventListener("click", makeCoffee);
+    $("#coffee_image").on("click", makeCoffee);
 
     function makeCoffee() {
-         myImage.src = "static/coffee_machine.jpg";
-         setTimeout(function() { myImage.setAttribute("src", "static/coffee_mug.jpg"); }, 1500);
-         setTimeout(function() { myImage.setAttribute("src", "static/coffee_beans.jpg"); }, 4000);
+         $("#coffee_image").attr("src", "static/coffee_machine.jpg");
+         // setTimeout(function() { myImage.setAttribute("src", "static/coffee_mug.jpg"); }, 1500);
+         setTimeout(function() { $("#coffee_image").attr("src", "static/coffee_mug.jpg"); }, 1500);
+         setTimeout(function() { $("#coffee_image").attr("src", "static/coffee_beans.jpg"); }, 4000);
     }
+
+    // var myRevenueMessage = document.getElementById("revenue");
+    var myRevenueMessage = $("#revenue");
 
 </script>
 
