--- a/coffee-rev.html
+++ b/coffee-rev.html
@@ -65,9 +65,10 @@
     };
 
     var makeCoffee = function(drinkType) {
-        $("#coffee-image").attr('src', 'static/coffee_machine.jpg');
-        setTimeout(function() { $("#coffee-image").attr("src", "static/coffee_mug.jpg"); }, 1500);
-        setTimeout(function() { $("#coffee-image").attr("src", "static/coffee_beans.jpg"); }, 4000);
+        $("#coffee-image").attr('src', 'static/coffee_machine.jpg').fadeToggle(1500);
+        setTimeout(function() { $("#coffee-image").attr("src", "static/coffee_mug.jpg").fadeToggle(2000); }, 1500);
+        setTimeout(function() { $("#coffee-image").attr("src", "static/coffee_beans.jpg").fadeToggle(2000); }, 5500);
+        $("#coffee-image").fadeToggle(2000);
         drinksOrdered.push(drinkType);
         console.log(drinksOrdered);
         $("#revenue").html('$' + revenue());
